selfhost/test/typechecker/accessor/error_unknown_field_unit.out
Error at %FILE_NAME%:3:8
Unknown field 'foo'
  |  noop().foo
            ^
No field 'foo' found on type Unit
